removed location refresh with new api call, data displays time ascending, fixed layout issue with flex

--- a/src/styles/admin.scss
+++ b/src/styles/admin.scss
@@ -102,7 +102,7 @@ div.admin-dash {
 }
 
 .admin-top {
-  border: 1px solid blue;
+  // border: 1px solid blue;
   display: flex;
   justify-content: space-between;
   width: 95%;
@@ -121,7 +121,7 @@ div.admin-fade {
 }
 
 div#admin-wrap {
-  border: 1px solid greenyellow;
+  // border: 1px solid greenyellow;
   width: 100vw;
   height: 100vh;
   display: flex;
@@ -197,7 +197,7 @@ div.admin-nav {
 
 .module-wrapper {
   width: 95%;
-  border: 1px solid yellow;
+  // border: 1px solid yellow;
   margin-bottom: 20px;
   height: 100%;
   overflow: scroll;
